Fixed Error, A4 being wrong size

--- a/DuggaSys/diagram.css
+++ b/DuggaSys/diagram.css
@@ -832,9 +832,6 @@
 }
 
 #vRect {
-    width: 1133px;
-    height: 794px;
-    display:none; 
     stroke:rgb(50, 50, 50);
     stroke-width:2; 
     stroke-dasharray: 5 3; 
